fix scroll on mobile

--- a/front/sass/pages/index.sass
+++ b/front/sass/pages/index.sass
@@ -31,6 +31,17 @@ body
   left: 0
   z-index: 4
 
+.fav__page
+  width: 100%
+  height: 100%
+  overflow: hidden
+  -webkit-tap-highlight-color: transparent
+  position: relative
+  background: #005
+  @media screen and (max-width: 600px)
+    height: auto
+
+
 .land
   pointer-events: none
   width: 100%
@@ -42,7 +53,7 @@ body
   @media screen and (min-width: 601px) and (max-width: 1024px) and (orientation: portrait)
     background: url('../img/bg-tab.jpg') no-repeat 50% 0/cover
   @media screen and (max-width: 600px) and (orientation: portrait)
-    background: url("../img/bg-mob.jpg") no-repeat 50% 0/cover
+    background: url("../img/bg-mob.jpg") no-repeat 50% 0/contain
   @media (max-width: 920px) and (orientation: landscape) and (max-height: 450px)
     background: url("../img/bg-landscape.jpg") no-repeat 50% 0/cover
   display: flex
